# VectorSentinel

./: README.md
vectorsentinel/: LICENSE  Makefile  README.md  pyproject.toml
vectorsentinel/benchmarks/: synthetic_benchmark.py
vectorsentinel/examples/: demo_hallucination.py  langchain_rag.py  quickstart.py
vectorsentinel/src/vectorsentinel/: __init__.py  cli.py  sentinel.py
vectorsentinel/src/vectorsentinel/core/: __init__.py  cluster.py  gate.py  index.py
vectorsentinel/src/vectorsentinel/integrations/: __init__.py  langchain.py  llamaindex.py
vectorsentinel/src/vectorsentinel/server/: __init__.py  app.py
vectorsentinel/src/vectorsentinel/stores/: __init__.py  base.py  chroma_store.py  faiss_store.py  numpy_store.py
vectorsentinel/tests/: test_core.py  test_gate.py  test_stores.py
